<!-- Michael Quon N01565129 -->
<resources>
    <string name="app_name" translatable="false">MichaelLab7</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="person">Person</string>
    <string name="settings">Settings</string>
    <string name="device_settings">Device Settings</string>
    <string name="michael" translatable="false">Michael</string>
    <string name="pokemon" translatable="false">Pokemon</string>
    <string name="name" translatable="false">"Michael Quon "</string>
    <string name="toronto_raptors" translatable="false">Toronto Raptors</string>
    <string name="toronto_maple_leafs" translatable="false">Toronto Maple Leafs</string>
    <string name="toronto_blue_jays" translatable="false">Toronto Blue Jays</string>
    <string name="ok" translatable="false">OK</string>
    <string name="selectedprovinceterritory" translatable="false">"Selected Province/Territory: "</string>
    <string name="province" translatable="false">PROVINCE</string>
    <string name="index">INDEX</string>
    <string name="selectedindex" translatable="false">Selected Index</string>
    <string name="index2">"INDEX: "</string>
    <string name="key" translatable="false">key</string>


    <string-array name="provinces_territories">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Nova Scotia</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Northwest Territories</item>
        <item>Nunavut</item>
        <item>Yukon</item>
    </string-array>

</resources>