<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".MichaelFragment">

    <TextView
        android:id="@+id/MicTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/MicRadioGroup"
        android:layout_width="224dp"
        android:layout_height="286dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MicTextView"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/MicRadioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toronto_raptors"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/MicRadioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toronto_maple_leafs"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/MicRadioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toronto_blue_jays"
            android:layout_weight="1"
            android:textSize="20sp"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
